Add GitHub CLI feature to devcontainer.json

--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -6,6 +6,9 @@
             "extensions": [
                 "GitHub.copilot"
             ]
-        }
+        },
+        "features": {
+            "ghcr.io/devcontainers/features/github-cli:1": {}
+          }
     }
 }
